k8s/app/overlays/local/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smt-ing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smt
                port:
                  number: 8090
          - path: /vnc
            pathType: Prefix
            backend:
              service:
                name: vnc-proxy
                port:
                  number: 8080
